--- a/Proto/Proto.vcxproj
+++ b/Proto/Proto.vcxproj
@@ -46,8 +46,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)include;$(ProjectDir);$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Documents\GitHub\SimpleAmqpClient\src;F:\Downloads\boost_1_57_0;$(ProjectDir)include;$(ProjectDir);$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Documents\GitHub\SimpleAmqpClient\Release;F:\Downloads\boost_1_57_0\stage\lib;$(ProjectDir)lib;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>
     </CustomBuildAfterTargets>
   </PropertyGroup>
@@ -80,7 +80,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libprotobuf-lite.lib;libprotobuf.lib;libprotoc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libprotobuf-lite.lib;libprotobuf.lib;libprotoc.lib;SimpleAmqpClient.2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
